feat(update): 增强批量操作功能支持多行UPSERT和生命周期回调
- 新增 executeWithCallbacks 方法在 UPSERT 前触发 JPA 生命周期回调
- 实现多行 UPSERT 批处理，支持 MySQL/PostgreSQL 批量合并模式
- 添加 supportsBatchUpsert 能力检测方法替代异常处理判断
- 提取 SoftDeleteBulkExecutor 实现批量软删除操作优化
- 扩展包结构文档，增加方言支持和工具类说明
- 优化安全审计实现，支持匿名用户识别和系统用户处理
- 增强模板初始化机制，改进缓存管理和并发安全性
- 完善 Oracle 和 SQL Server 方言支持
- 修复 LEFT JOIN ON 子句谓词应用逻辑
- 优化乐观锁重试机制确保事务隔离性